--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1111,6 +1111,9 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
+.m-5 {
+	margin: 1.25rem;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1187,8 +1190,14 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .block {
 	display: block;
+}
+.inline {
+	display: inline;
 }
 .flex {
 	display: flex;
@@ -1331,9 +1340,6 @@ select {
 .cursor-pointer {
 	cursor: pointer;
 }
-.resize {
-	resize: both;
-}
 .list-inside {
 	list-style-position: inside;
 }
@@ -1401,6 +1407,9 @@ select {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+.break-all {
+	word-break: break-all;
 }
 .rounded-md {
 	border-radius: 0.375rem;
